# aes-cmac

./: .gitignore  Makefile  README.md  requirements.txt
.scripts/: build.sh  clean.sh
aes-cmac/: AesCmac.h  CMakeLists.txt  PyAesCmac.py
aes-cmac/cpp/: AesCmac.cpp  AesCmac.h  CMakeLists.txt  PyAesCmac_so.cpp
test/: AesCmac_test.cpp
